--- a/To-do.html
+++ b/To-do.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>To Do List</title>
+<title>To Do List 3</title>
 
 </head>
 
